--- a/style.css
+++ b/style.css
@@ -308,6 +308,14 @@ display: flex;
   flex-direction: column;
   background-color: white;
   padding: 20px;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 16px;
+}
+
+.section2 img {
+  display: flex;
+  margin-bottom: 1rem;
 }
 
 .section h2 {
@@ -323,7 +331,6 @@ display: flex;
 
 .column {
   display: grid;
-  align-items: center;
   grid-template-columns: repeat(2, 1fr);
 }
 
@@ -338,11 +345,13 @@ display: flex;
   text-decoration: none;
   border-radius: 5px;
   margin-top: 20px;
-  max-width: 10rem;
+  max-width: 6rem;
 }
 
-..learn-more :hover{
-  
+.learn-more:hover{
+  background-color: var(--color-gray);
+  color: var(--color-white);
+  text-decoration: none;
 }
   
 .review-section {
